dyld: Symbol not found: __ZN3WTF19initializeThreadingEv - webkit MacOSX https://bugs.webkit.org/show_bug.cgi?id=214034

Reviewed by Mark Lam.

* wtf/Threading.cpp:
(WTF::initializeThreading): Export the old symbol name for compatibility.


Canonical link: https://commits.webkit.org/226904@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@264126 268f45cc-cd09-0410-ab3c-d52691b4dbfc